# llama_int8

./: .gitignore  CMakeLists.txt  readme.md
include/: load8bit.h  transformer.h
src/: load8bit.cpp  main.cpp  transformer.cpp
